# VoxelOptimizer

./: BUGS.MD  CHANGELOG.MD  CLI.MD  CMakeLists.txt  LICENSE  QBCL.MD  README.md  export_presets.cfg  icon-win.png.import  main.cpp  project.godot  thumb.png.import
Assets/: Main.shader  Unshaded.material  add_folder.svg.import  back_arrow.svg.import  forward_arrow.svg.import  kenney_future_narrow.tres  star.svg.import  ui_theme_dark.tres  ui_theme_purple.tres
Assets/Icons/: Logo white.svg.import  VOptimizer-Splash.png.import  chart.svg.import  github-mark-white.svg.import  icon.png.import  info.svg.import  wireframe.png.import  wireframe.svg.import
Assets/Icons/Filedialog/: add_folder.svg.import  back_arrow.svg.import  forward_arrow.svg.import  star.svg.import
Assets/Icons/Presskits/: Logo white.svg.import  github-mark-white.svg.import
Assets/Theme/: ui_theme_dark.tres
Assets/Theme/Fonts/: NotoSans-Regular.tres
Icon/: V.png.import  banner.blend  banner.png.import  banner.xcf  favicon.png.import  icon.blend  icon.png.import  icon.xcf  icon_cube.png.import  icon_itch.png.import  icon_small.png.import  untitled.blend
Scenes/: GimbleCam.tscn  Main.tscn
Scenes/UI/: AboutDialog.tscn  CustomFileDialog.tscn  Fileselect.tscn  PopupFileDialog.tscn
Scripts/: FileDialogConfig.gd  GimbleCam.gd  SettingManager.gd
Scripts/UI/: AboutDialog.gd  CustomFileDialog.gd  FileDialog.gd  Fileselect.gd  Main.gd  PopupFileDialog.gd  SelectBox.gd  VersionLabel.gd  ViewportContainer.gd
cli/: CMakeLists.txt  argh.h  main.cpp
gdnative/: CMakeLists.txt  main.cpp
gdnative/include/: GodotVoxelOptimizer.hpp
gdnative/lib/: CMakeLists.txt
gdnative/lib/include/VoxelOptimizer/: BBox.hpp  Color.hpp  Mat4x4.hpp  Material.hpp  Mesh.hpp  Texture.hpp  Vector.hpp  VoxelOptimizer.hpp
gdnative/lib/include/VoxelOptimizer/Exporters/: ExportSettings.hpp  GLTFExporter.hpp  GodotSceneExporter.hpp  IExporter.hpp  PLYExporter.hpp  SpriteStackingExporter.hpp  WavefrontObjExporter.hpp
gdnative/lib/include/VoxelOptimizer/Loaders/: GoxelLoader.hpp  ILoader.hpp  ISaver.hpp  KenshapeLoader.hpp  MagicaVoxelLoader.hpp  QubicleBinary.hpp  QubicleBinaryLoader.hpp  QubicleBinaryTree.hpp  QubicleBinaryTreeLoader.hpp  QubicleExchange.hpp  QubicleExchangeLoader.hpp  QubicleLoader.hpp  VEditHandler.hpp  VoxelMesh.hpp
gdnative/lib/include/VoxelOptimizer/Meshers/: GreedyMesher.hpp  IMesher.hpp  MarchingCubesMesher.hpp  SimpleMesher.hpp  VerticesReducer.hpp
gdnative/lib/include/voxeloptimizer/: Color.hpp  Exceptions.hpp  Material.hpp  Mesh.hpp  OptimizeMesher.hpp  SimpleMesher.hpp  Vector.hpp  VoxelLoader.hpp  WavefrontObjExporter.hpp
gdnative/lib/src/: FileUtils.hpp  OptimizeMesher.cpp  SimpleMesher.cpp  Texture.cpp  VoxelLoader.cpp  WavefrontObjExporter.cpp
gdnative/lib/src/Exporters/: GodotSceneExporter.cpp  IExporter.cpp  PLYExporter.cpp  SpriteStackingExporter.cpp  WavefrontObjExporter.cpp
gdnative/lib/src/Exporters/glTF/: GLTFExporter.cpp  Nodes.hpp
gdnative/lib/src/Loaders/: GoxelLoader.cpp  ILoader.cpp  Kenshape.hpp  KenshapeLoader.cpp  MagicaVoxelLoader.cpp  QubicleBinary.cpp  QubicleBinaryLoader.cpp  QubicleBinaryTree.cpp  QubicleBinaryTreeLoader.cpp  QubicleExchange.cpp  QubicleExchangeLoader.cpp  QubicleLoader.cpp  VoxelMesh.cpp
gdnative/lib/src/Meshers/: GreedyMesher.cpp  IMesher.cpp  IMesher.hpp  MarchingCubesMesher.cpp  SimpleMesher.cpp  VerticesReducer.cpp
gdnative/lib/src/Meshers/Slicer/: Slicer.cpp  Slicer.hpp
gdnative/src/: GodotVoxelOptimizer.cpp
native/: voxeloptimizer.gdnlib  voxeloptimizer.gdns
vedit/: VoxelGrid.gd  VoxelGrid.tscn
